option('256-colors', type: 'boolean', value: false, description: '256 color support')
option('88-colors', type: 'boolean', value: false, description: '88 color support')
option('apidoc', type: 'boolean', value: true, description: 'whether to generate API docs with doxygen')
option('backtrace', type: 'boolean', value: true, description: 'backtrace support')
option('bittorrent', type: 'boolean', value: true, description: 'BitTorrent protocol support')
option('bookmarks', type: 'boolean', value: true, description: 'bookmark support')
option('brotli', type: 'boolean', value: false, description: 'brotli support')
option('bzlib', type: 'boolean', value: false, description: 'bzip2 support')
option('cgi', type: 'boolean', value: false, description: 'local CGI support')
option('codepoint', type: 'boolean', value: true, description: 'whether check codepoints on Linux console')
option('cookies', type: 'boolean', value: true, description: 'cookie support')
option('css', type: 'boolean', value: true, description: 'Cascading Style Sheet support')
option('data', type: 'boolean', value: true, description: 'data protocol support')
option('dgi', type: 'boolean', value: false, description: 'DOS Gateway Interface support')
option('doc', type: 'boolean', value: true, description: 'whether build documentation')
option('docdir', type: 'string', value: '', description: 'Documentation installation directory. Default $prefix/share/doc/elinks.')
option('exmode', type: 'boolean', value: false, description: 'exmode (CLI) interface')
option('fastmem', type: 'boolean', value: false, description: 'direct use of system allocation functions, not usable with debug enabled')
option('finger', type: 'boolean', value: false, description: 'finger protocol support')
option('formhist', type: 'boolean', value: true, description: 'form history support')
option('fsp', type: 'boolean', value: false, description: 'FSP protocol support')
option('fsp2', type: 'boolean', value: false, description: 'FSP protocol support without fsplib and fork calls')
option('ftp', type: 'boolean', value: true, description: 'ftp protocol support')
option('gemini', type: 'boolean', value: false, description: 'gemini protocol support')
option('gettext', type: 'boolean', value: false, description: 'use external gettext library')
option('globhist', type: 'boolean', value: true, description: 'global history support')
option('gnutls', type: 'boolean', value: false, description: 'GNUTLS SSL support')
option('gopher', type: 'boolean', value: false, description: 'gopher protocol support')
option('gpm', type: 'boolean', value: true, description: 'gpm (mouse) support')
option('gssapi', type: 'boolean', value: false, description: 'GSSAPI support')
option('guile', type: 'boolean', value: false, description: 'Guile support')
option('htmldoc', type: 'boolean', value: true, description: 'whether to build html docs')
option('html-highlight', type: 'boolean', value: false, description: 'HTML highlighting using DOM engine')
option('idn', type: 'boolean', value: true, description: 'international domain names support')
option('ipv6', type: 'boolean', value: true, description: 'IPv6 support')
option('kitty', type: 'boolean', value: false, description: 'support for kitty graphics protocol')
option('largefile', type: 'boolean', value: true, description: 'support for large files')
option('leds', type: 'boolean', value: true, description: 'LEDs support')
option('libavif', type: 'boolean', value: false, description: 'support for AVIF images')
option('libcss', type: 'boolean', value: true, description: 'whether to compile libcss support, requires libdom. This option is automatically enabled with js support')
option('libcurl', type: 'boolean', value: true, description: 'whether to compile libcurl support. This option is recommended for js support')
option('libev', type: 'boolean', value: false, description: 'compile with libev (libevent compatibility mode)')
option('libevent', type: 'boolean', value: false, description: 'compile with libevent.')
option('libsixel', type: 'boolean', value: false, description: 'whether to compile libsixel support to show images directly on sixel compatible terminals')
option('libuv', type: 'boolean', value: false, description: 'compile with libuv.')
option('libwebp', type: 'boolean', value: false, description: 'support for WEBP images')
option('luapkg', type: 'string', value:'', description: 'Lua version')
option('lzma', type: 'boolean', value: false, description: 'lzma encoding support')
option('mailcap', type: 'boolean', value: true, description: 'mailcap support')
option('marks', type: 'boolean', value: true, description: 'document marks support')
option('memcount', type: 'boolean', value: false, description: 'count memory allocations')
option('mimetypes', type: 'boolean', value: true, description: 'mimetypes files support')
option('mouse', type: 'boolean', value: true, description: 'mouse support')
option('mujs', type: 'boolean', value: false, description: 'use mujs library')
option('nls', type: 'boolean', value: true, description: 'Native Language Support')
option('nntp', type: 'boolean', value: false, description: 'nntp protocol support')
option('no-root', type: 'boolean', value: false, description: 'prevention of usage by root')
option('openssl', type: 'boolean', value: true, description: 'OpenSSL support')
option('own-libc', type: 'boolean', value: false, description: 'force use of internal functions instead of those of system libc')
option('pdfdoc', type: 'boolean', value: true, description: 'whether to build manual.pdf')
option('perl', type: 'boolean', value: false, description: 'Perl5 support')
option('python', type: 'boolean', value: false, description: 'Python3 support')
option('quickjs', type: 'boolean', value: false, description: 'use quickjs library')
option('reproducible', type: 'boolean', value: false, description: 'reproducible build')
option('ruby', type: 'boolean', value: false, description: 'Ruby support')
option('sftp', type: 'boolean', value: true, description: 'whether to compile SFTP protocol support. Requires libcurl')
option('small', type: 'boolean', value: false, description: 'reduce binary size as far as possible (but see the bottom of doc/small.txt!)')
option('smb', type: 'boolean', value: false, description: 'Samba protocol support')
option('sm-scripting', type: 'boolean', value: false, description: 'ECMAScript browser scripting (requires Spidermonkey)')
option('source-date-epoch', type: 'string', value: '', description: 'source date epoch for reproducible builds')
option('spartan', type: 'boolean', value: false, description: 'spartan protocol support')
option('spidermonkey', type: 'boolean', value: false, description: 'SpiderMonkey Mozilla JavaScript engine support')
option('static', type: 'boolean', value: false, description: 'link static binary')
option('sysmouse', type: 'boolean', value: false, description: 'BSD sysmouse support')
option('terminfo', type: 'boolean', value: false, description: 'terminfo support')
option('test', type: 'boolean', value: false, description: 'whether build test programs')
option('test-js', type: 'boolean', value: true, description: 'whether to test js, requires also test to be enabled')
option('test-mailcap', type: 'boolean', value: false, description: 'whether build test mailcap program')
option('tre', type: 'boolean', value: true, description: 'TRE regex search support')
option('true-color', type: 'boolean', value: false, description: 'true color support')
option('uri-rewrite', type: 'boolean', value: true, description: 'URI rewrite support')
option('utf-8', type: 'boolean', value: true, description: 'UTF-8 support')
option('win32-vt100-native', type: 'boolean', value: false, description: 'whether to use builtin in Windows 10 and higher VT100 emulation')
option('withdebug', type: 'boolean', value: false, description: 'leak debug and internal error checking')
option('x', type: 'boolean', value: false, description: 'use the X Window System')
option('xbel', type: 'boolean', value: true, description: 'XBEL bookmark support (requires expat)')
option('xterm', type: 'boolean', value: false, description: 'how to invoke the X terminal emulator')
option('zlib', type: 'boolean', value: true, description: 'zlib support')
option('zstd', type: 'boolean', value: false, description: 'zstd support')
