## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.3 2004/08/15 05:51:12 miciah Exp $

include $(top_srcdir)/Makefile.base

EXTRA_DIST = \
 7bit.cp \
 7bitrepl.lnx \
 8859_1.cp \
 8859_10.cp \
 8859_13.cp \
 8859_14.cp \
 8859_15.cp \
 8859_16.cp \
 8859_2.cp \
 8859_3.cp \
 8859_4.cp \
 8859_5.cp \
 8859_6.cp \
 8859_7.cp \
 8859_8.cp \
 8859_9.cp \
 README \
 cp1125.cp \
 cp1250.cp \
 cp1251.cp \
 cp1252.cp \
 cp1256.cp \
 cp1257.cp \
 cp437.cp \
 cp737.cp \
 cp850.cp \
 cp852.cp \
 cp866.cp \
 entities.lnx \
 gen \
 gen-7b \
 gen-cp \
 gen-ent \
 index.txt \
 kamen.cp \
 koi8_r.cp \
 koi8_ru.cp \
 koi8_u.cp \
 mac_lat2.cp \
 macroman.cp \
 tcvn5712.cp \
 tr7bit.awk \
 utf_8.cp \
 viscii.cp

