## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.8.4.4 2005/02/28 20:11:37 jonas Exp $

include $(top_srcdir)/Makefile.base

EXTRA_DIST = \
 LinksOS2Icon.zip \
 README \
 colws.diff \
 elinks.conf \
 elinks-vim.diff \
 elinks.fortune \
 elinks.spec.in \
 elinks.vim \
 js-1.5-rc6a+elinks.patch \
 keybind-full.conf \
 keybind.conf \
 links_wps.zip \
 wipe-out-ssl \
 wipe-out-ssl.awk \
 user.css \
 conv/conf-links2elinks.pl \
 conv/mailcap.pl \
 conv/old_to_new_bookmarks.sh \
 conv/w3m2links.gawk \
 guile/internal-hooks.scm \
 guile/user-hooks.scm \
 lua/bm-to-elinks-bookmarks.lua \
 lua/bm.lua \
 lua/config.lua \
 lua/elinks-remote \
 lua/hooks.lua.in \
 lua/md5check.lua \
 lua/remote.lua \
 perl/hooks.pl \
 ruby/hooks.rb
